--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,30 @@
   color: #61dafb;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+  /* height: 260px; */
+}
+
+::-webkit-scrollbar-track {
+  background: white;
+ 
+}
+
+::-webkit-scrollbar-thumb {
+  /* background-color: #0F0F0F; */
+  background-image: linear-gradient(315deg, #eaedee 0%, #c9caca 74%);
+
+  border-radius: 25px;
+  /* border: 3px solid pink; */
+  height: 100px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #0F0F0F;
+  background-image: linear-gradient(315deg, #c9caca 0%, #eaedee 74%);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
