--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +11,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #efe7d7ff;
+  background-image: url('../src/utils/henry-co-tqu0IOMaiU8-unsplash.jpg');
 }
 
 code {
