--- a/client/src/styles/Pagination.module.css
+++ b/client/src/styles/Pagination.module.css
@@ -19,7 +19,7 @@
   }
   
   .number {
-    background-color: #F4511E;
+    background-color: #fc6e43;
     /* background-color: rgb(243, 235, 235); */
     color: white;
     display: flex;
