--- a/client/src/styles/Card.module.css
+++ b/client/src/styles/Card.module.css
@@ -1,10 +1,11 @@
 .card{
   position: relative;
   background: white;
-  width: 340px;
-  height: 460px;
+  min-width: 340px;
+  min-height: 460px;
   box-shadow: 0px 0px 30px 2px #000;
   border-radius: 10px;
+
 }
 
 .card:hover{
