--- a/client/src/styles/Details.module.css
+++ b/client/src/styles/Details.module.css
@@ -1,123 +1,113 @@
-.container{
-  border: 12px solid rgb(169, 149, 202)
+/* --------------------------------- general -------------------------------- */
+.container{ 
+  width: 70vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  justify-items: center;
+  align-items: center;
+  background: rgba(102, 102, 102, 0.074);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(19.5px);
+  border-radius: 15px;
+  border: 1px solid rgba(93, 92, 92, 0.18);
+  -webkit-animation: fade-in 0.8s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 0.8s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 
-
+/* ---------------------------------- title --------------------------------- */
 .title{
   margin-top: 40px;
-  font-size: 2rem;  
+  font-size: 1.5rem;  
   color: #4A148C;
   text-align: center;
-  font-weight: bold;  
 }
 
 
-
+/* ------------------------------ image recipe ------------------------------ */
 .img{
-  margin-top: 80px;
-  width:500px;
-  border: 5px solid rgb(149, 117, 205);
-  margin-right: 600px;
+  margin-top: 24px;
+  position: relative;
+  height: 60%;
+  width: 60%;
+  border-radius: 15px;
+  border: 4px solid rgb(149, 117, 205);
 }
 
 
-.upContainer{
-  display: flex;
-  justify-items:center;
-  margin-top: 50px;
-  margin-left: 250px;
-  margin-bottom: 30px;
-}
-
-.scoreContainer{
-  background-color: white;
-  border-radius: 10px;
-  width: 100px;
-  height: 60px;
-  margin-left: 520px;
-  border: 2px solid rgb(149, 117, 205);
-  color: #4A148C;
-  
-  
-}
-
-.score{
-  margin: 5px;
-
-}
-
-
-.dish{
-  background-color: white;
-  border-radius: 10px;
-  margin-left: 100px;
-  width: 100px;
-  min-height: 60px;
-  /* height: 60px; */
-  border: 2px solid rgb(149, 117, 205);
-  color: #4A148C; 
-}
-
-.dishTitle{
-  margin: 5px;
-  text-transform: capitalize;
-}
-
-.dishT{
-  text-transform: capitalize;
-}
-
+/* ------------------------ types of diets container ------------------------ */
 .type{
-margin-top: -330px;
-margin-left: 550px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 24px;
+  position: relative;
+  align-items: center;
 }
 
 .typeItems{
+  
+  margin-top: 20px;
   text-transform: capitalize;
   text-align: center;
-  color: #4A148C;
-  letter-spacing: 1.5px;
+  /* color: #4A148C; */
+  color: white;
+  letter-spacing: 0.5px;
+  margin: 0.5rem;
+  font-size: 1.2rem;
+    padding: 0.5rem;
+    border: solid 1px transparent;
+    border-radius: 0.8rem;
+    background-color: #FF8A65;
 }
 
-.vegetarian{
-  margin-top: 5px;
-  letter-spacing: 1.5px;
-  justify-content: center;
-
+.scoreContainer{
+display: flex;
+flex-direction: row;
+margin-left: 39%;
+margin-top: 10px
 }
 
-
-.typeTitle{
-  color: #4A148C;
-  margin-bottom: 20px;
-
+.healthScore{
+  margin-right: 3rem;
+  font-size: 2rem;
 }
 
-.logoVeggie{
-margin-left: 550px;
-margin-top: -80px;
+.clock{
+  margin-right: 3rem;
+  font-size: 2rem;
 }
 
+.person{
+  margin-right: 3rem;
+  font-size: 2rem;
+}
+
+.score{
+  font-size: 1.7rem;
+}
+/* --------------------------------- summary -------------------------------- */
 .summaryContainer{
-  /* margin-top: 10px; */
+  margin-top: 26px;
   padding-left: 100px;
   padding-right: 100px;
-  padding-top: 30px;
-  padding-bottom: 30px;
- 
-
+  padding-top: 10px;
+  padding-bottom: 30px; 
 }
 
 .summaryText{
   text-align: justify;
-  color: #212121;
+  color: #494848;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
 .summaryTitle{
-  text-decoration:underline;
   margin-bottom: 10px;
-  font-weight: bold;
+  font-weight: 500;
   color: #4A148C;
 }
 
@@ -150,11 +140,8 @@ margin-top: -80px;
 
 .stepTitle{
  margin-bottom: 10px;
- text-decoration: underline;
  color: #4A148C;
- font-weight: bold;
- 
- 
+ font-weight: 500;
 }
 
 
@@ -162,8 +149,9 @@ margin-top: -80px;
   list-style:none;
   margin-bottom: 20px;
   color: #212121;
+  font-weight: 400; 
+  font-size: 1.5rem;
 
-  
 }
 
 .button{
@@ -198,10 +186,8 @@ margin-top: -80px;
 
 .spinnerContainer{
   margin: 0;
-  position: absolute;
-  top: 50%;
+  position: relative;
   left: 50%;
-
   }
 
 .delete{
