--- a/client/src/styles/CreateForm.module.css
+++ b/client/src/styles/CreateForm.module.css
@@ -1,25 +1,25 @@
-.container {
-  display: flex;
-  /* margin: 50px; */
-  margin-left: 400px;
-}
 
-.form {
-  margin-bottom: 40px;
-  position: absolute;
-  background-color: rgb(174, 159, 204);
-  /* margin: 1000px; */
-  min-width: 600px;
-  min-height: 600px;
-  padding: 16px;
-  border-radius: 10px;
-  /* margin:auto; */
-  border: 2px solid black;
+.container{
+  width: 50vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  justify-items: center;
+  align-items: center;
+  background: rgba(102, 102, 102, 0.074);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(19.5px);
+  border-radius: 15px;
+  border: 1px solid rgba(93, 92, 92, 0.18);
   background-image: url(../utils/minimal.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  
 }
+
+
 
 .label {
   /* width:97px; */
@@ -32,8 +32,8 @@
   margin-top: 20px;
   background: transparent;
   border: none;
-  font-size: 16px;
-  height: 30px;
+  font-size: 1.3rem;
+  height: 35px;
   padding: 5px;
   width: 200px;
   color: white;
@@ -43,14 +43,29 @@
 
 .input {
   width: 180px;
-  padding: 3px 10px;
+  padding: 6px 30px;
   border: 2px solid #363636;
-  border-radius: 3px;
+  border-radius: 6px;
   background-color: #f6f6f6;
   /* margin: 20px; */
   margin-top: 20px;
   display: inline-block;
+  font-size: 1.2rem;
 }
+
+.inputSteps {
+  width: 180px;
+  padding: 2px 60px;
+  border: 2px solid #363636;
+  border-radius: 6px;
+  background-color: #f6f6f6;
+  /* margin: 20px; */
+  margin-top: 20px;
+  display: inline-block;
+  font-size: 1.2rem;
+}
+
+
 
 .inputText {
   width: 180px;
@@ -64,8 +79,8 @@
 }
 
 .buttonSend {
-  width: 50%;
-  padding: 1em 3em;
+  /* width: 30%; */
+  padding: 2em 15em;
   margin-top: 32px;
   border: 2px solid #000;
   border-radius: 5px;
@@ -75,24 +90,33 @@
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
-  border: none;
+  /* border: none; */
   font-weight: bold;
 }
 
+.buttonSend:active {
+  background-color: #9061ffff;
+  box-shadow: 0px 15px 20px rgb(149, 117, 205);
+  color: #fff;
+  transform: translateY(3px);
+  border: none;
+}
+
+
 .buttonGo {
-  width: 50%;
-  padding: 8px 16px;
+  /* width: 30%; */
+  /* padding: 8px 16px; */
   margin-top: 32px;
   border: 2px solid #000;
   border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
-  padding: 1em 3em;
+  padding: 2em 15em;
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
-  border: none;
+  /* border: none; */
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.1);
   outline: none;
   font-weight: bold;
@@ -103,13 +127,20 @@
   box-shadow: 0px 15px 20px rgb(149, 117, 205);
   color: #fff;
   transform: translateY(3px);
+  border: none;
 }
 
 .title {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
+  margin-top: 20px;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   letter-spacing: 2px;
+  font-family: Italiana;
+}
+
+.sign{
+  color:#c62828
 }
 
 .option {
@@ -122,6 +153,7 @@
   font-weight: bolder;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  
 }
 
 .selectX {
@@ -129,15 +161,30 @@
   border-radius: 5px;
   font-weight: bolder;
   width: 20px;
+  
 }
+
+.selectContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  
+}
+
 
 .pTitle {
   font-weight: bolder;
-  margin-top: 10px;
+  margin-top: 16px;
   letter-spacing: 1px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   /* color: #424242; */
   color: #000;
+  font-size: 1.3rem;
+}
+
+.dietTitle{
+  font-size: 1.3rem;
 }
 
 /* .inputD{
