--- a/client/src/styles/Landing.module.css
+++ b/client/src/styles/Landing.module.css
@@ -9,10 +9,15 @@
 .landingTitle{
     padding: 80px;
     margin-left: 190px;
+    margin-bottom: 80px;
   -webkit-text-stroke: 2px #23211f;
-
+  letter-spacing: 0.2rem;
 }
 
+/* .textContainer{
+  background-color: red;
+  margin-top: 40px;
+} */
 
 .text{
     font-size: 1rem;
