--- a/client/src/styles/Landing.module.css
+++ b/client/src/styles/Landing.module.css
@@ -1,17 +1,23 @@
 .landingContainer{
     background-image: url('../utils/landing.png');
     background-position: center;
+    background-size:80vw;
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
 }
 
+.to{
+  display: block;
+}
+
 .landingTitle{
-    padding: 80px;
+    padding: 100px;
     margin-left: 190px;
     margin-bottom: 80px;
-  -webkit-text-stroke: 2px #23211f;
+  -webkit-text-stroke: 1px #23211f;
   letter-spacing: 0.2rem;
+  font-family: Italiana;
 }
 
 /* .textContainer{
@@ -21,11 +27,12 @@
 
 .text{
     font-size: 1rem;
-    color:black;
+    /* color:rgb(255, 171, 145); */
     font-weight: bold;
     padding-left: 180px;
-    margin-top: -70px;
-  -webkit-text-stroke: 1px #23211f;
+    margin-top: -178px;
+    font-family: Italiana;
+  -webkit-text-stroke: 1px #f4511e;
 }
 
 .buttonContainer{
