--- a/client/src/styles/CreateForm.module.css
+++ b/client/src/styles/CreateForm.module.css
@@ -15,9 +15,10 @@
   background-image: url(../utils/minimal.png);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position:center;
   
 }
+
 
 
 
@@ -55,7 +56,7 @@
 
 .inputSteps {
   width: 180px;
-  padding: 2px 60px;
+  padding: 1px 40px;
   border: 2px solid #363636;
   border-radius: 6px;
   background-color: #f6f6f6;
@@ -80,7 +81,7 @@
 
 .buttonSend {
   /* width: 30%; */
-  padding: 2em 15em;
+  padding: 2em 5rem;
   margin-top: 32px;
   border: 2px solid #000;
   border-radius: 5px;
@@ -111,7 +112,7 @@
   border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
-  padding: 2em 15em;
+  padding: 2em 5em;
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
@@ -180,7 +181,7 @@
   text-transform: capitalize;
   /* color: #424242; */
   color: #000;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
 }
 
 .dietTitle{
